Add a few commands to the list

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <h3>GitHub Commands:</h3> 
 
             <ul> 
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
+                <li>Command $git status</li>
+                <li>Command $git diff</li>
+                <li>Command $git add[file]</li>
+                <li>Command $git diff --staged</li>
+                <li>Command $git reset [file]</li>
             </ul> 
 
             <h3>Helpful Links:</h3>
