Changes "Commands" to "Cheats"

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
             <hr />
 
-            <h3>GitHub Commands:</h3> 
-
+            <h3>GitHub Cheats:</h3> 
+            <p>Check these out they're awesome!</p>
             <ul> 
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
-                <li>Command</li>
+                <li>Cheats</li>
+                <li>Cheats</li>
+                <li>Cheats</li>
+                <li>Cheats</li>
+                <li>Cheats</li>
             </ul> 
 
             <h3>Helpful Links:</h3>
